# sublib

./: .gitignore  README.md  pyproject.toml
docs/: ASS File Format Specification [www.tcax.org].html  ass-parsing.md  ass-unified-parsing-architecture.md
src/sublib/: __init__.py  exceptions.py  io.py
src/sublib/ass/: __init__.py  descriptors.py  diagnostics.py  elements.py  extractor.py  io.py  models.py  naming.py  parser.py  parser_layer1.py  renderer.py  repository.py  semantic.py  tag_registry.py  text_parser.py  text_renderer.py  text_transform.py
src/sublib/ass/ast/: __init__.py  elements.py  segment.py
src/sublib/ass/core/: __init__.py  descriptors.py  diagnostics.py  naming.py
src/sublib/ass/engines/: __init__.py  doc_renderer.py  semantic_parser.py  structural_parser.py
src/sublib/ass/io/: loader.py  writer.py
src/sublib/ass/models/: __init__.py  base.py  event.py  file.py  info.py  raw.py  schema.py  style.py
src/sublib/ass/serde/: __init__.py  event.py  file.py  script_info.py  style.py  text.py
src/sublib/ass/services/: __init__.py  extractor.py  parser.py  renderer.py
src/sublib/ass/tags/: __init__.py  _base.py  _registry.py  base.py  border.py  clip.py  color.py  drawing.py  fade.py  font.py  (+7 more)
src/sublib/core/: __init__.py  exceptions.py  models.py
src/sublib/formats/: __init__.py
src/sublib/lrc/: __init__.py  models.py  parser.py  renderer.py
src/sublib/lyrics/: __init__.py  models.py  parser.py  renderer.py
src/sublib/utils/: __init__.py
tests/: __init__.py  check_samples_diagnostics.py  regression_mfgen.py  test_parser.py
(+47 files in other folders)
