[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sublib"
version = "0.2.1"
description = "A Python library for parsing and rendering subtitle files (ASS, SRT, VTT, ...)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Yang" }
]
keywords = ["subtitle", "ass", "ssa", "srt", "vtt", "parser", "renderer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Text Processing :: Markup",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sublib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

